--- a/demojpa/src/main/resources/application.properties
+++ b/demojpa/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=7090
 
 # datasource
-spring.datasource.url = jdbc:oracle:thin:@192.168.130.128:1521:java
+spring.datasource.url = jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username = kyobo
 spring.datasource.password = 1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
